# tala-app

./: .env  .gitignore  AGENTS.md  CODEWIKI.md  CROSS_PLATFORM_BUILD.txt  MASTER.md  MASTER_PYTHON_REQUIREMENTS.txt  PORTABLE_BUILD_README.txt  README.md  README_FIRST.md  SUGGESTIONS_1.txt  TALA_CAPABILITIES.md  TALA_CONFIGURATION.md  TALA_ROADMAP.md  TALA_TECH_STACK.md  USB_README.txt  _INDEX.md  agent_profiles.json  archive_out.txt  archive_verification_output.txt  assesment_one.md  bootstrap.ps1  bootstrap.sh  cleanup_actions.txt  clear_verification_output.txt  code_roots.json  context_errors.txt  context_errors_utf8.txt  debug_output.txt  dev.bat  diag_out_utf8.txt  diagnostic.py  diagnostic_report.txt  docker-compose.memory.yml  eslint.config.js  failed_tests.txt  final_test_out.txt  git_debug_log.txt  index.html  integration_test.db  (+63 more)
mcp-servers/astro-engine/: _INDEX.md  agent_profiles.json  pip_list.txt  pip_list_utf8.txt  pyproject.toml  requirements.txt
mcp-servers/astro-engine/astro_emotion_engine/: _INDEX.md  config.py  engine.py  (+1 more)
mcp-servers/astro-engine/astro_emotion_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-servers/tala-memory-graph/: ARCHITECTURE_OVERVIEW.md  ASTRO_CONTEXT.md  EXTRACTION_PIPELINE.md  GRAPH_LAYER.md  MEM0_INTEGRATION.md  MEMORY_SCHEMA.md  OBSERVABILITY.md  VALIDATION_POLICY.md  adapter.py  demo_persistence.sqlite  diagnostic.py  emotion_engine.py  err.txt  extractor.py  graph_store.py  main.py  memory_audit.jsonl  pyproject.toml  requirements.txt  test_manual.db  test_output.txt  validator.py  verify_mcp.py
(+1523 files in other folders)
