[project]
name = "tala-memory-graph"
version = "0.1.0"
description = "Production-grade memory graph MCP server for Tala"
dependencies = [
    "mcp",
    "pydantic>=2.0",
    "fastmcp",
    "PyYAML",
    "pytest",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
